Calc correct number of detonations when jumping in time

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -38,7 +38,7 @@ html, body {
 
 #timeline_container {
     width:100%;
-    height: 2%;
+    height: 32px;
 }
 
 #info {
